--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python=3.9.7
-setuptools=58.0.4
-yaml=0.2.5
+setuptools>=65.0.0
+PyYAML>=5.4.1
 h5py==3.7.0
 matplotlib==3.5.2
 nltk==3.7
@@ -11,8 +10,10 @@ scikit-learn==1.1.2
 scipy==1.8.1
 seaborn==0.11.2
 setproctitle==1.2.3
-torch==1.12.0
-torchaudio==0.12.0
-torchvision==0.13.0
 wandb==0.13.2
 yacs==0.1.8
+tensorboard==2.2.2
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.12.0+cu113
+torchvision==0.13.0+cu113
+torchaudio==0.12.0+cu113
